# esp-fmw-teste

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/common/: CMakeLists.txt  common_controller.c  common_params.c  common_torrador_controller.c
components/common/include/: common.h  common_controller.h  common_params.h  common_torrador_controller.h
components/controller/: CMakeLists.txt  adc.c  controller.c  pwm.c
components/controller/include/: adc.h  controller.h
components/database/: CMakeLists.txt  database.c
components/database/include/: database.h
components/database_controller/: CMakeLists.txt  database_controller.c
components/database_controller/include/: database_controller.h
components/lcd_gui/: CMakeLists.txt  components.c  content.c  content_manager.c  lcd_gui-backup.c  lcd_gui.c  screen.c  screen_manager.c  view.c
components/lcd_gui/contents/: chart.c  controls.c
components/lcd_gui/include/: chart.h  components.h  content.h  content_manager.h  controls.h  lcd_gui.h  manual_mode.h  menu.h  screen.h  screen_manager.h
components/lcd_gui/screens/: manual_mode.c  menu.c
components/torrador_controller/: CMakeLists.txt  controller.c  torrador_controller.c
components/torrador_controller/include/: controller.h  pwm.h  torrador_controller.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
